--- a/pr105 - S2DB/pom.xml
+++ b/pr105 - S2DB/pom.xml
@@ -41,6 +41,12 @@
 			<artifactId>gson</artifactId>
 			<version>2.8.0</version>
 		</dependency>
+	
+		<dependency>
+			<groupId>com.jayway.jsonpath</groupId>
+			<artifactId>json-path</artifactId>
+			<version>2.0.0</version>
+		</dependency>
 
 
 		<dependency>
