--- a/pr135 - ASN.1 Decoding/.classpath
+++ b/pr135 - ASN.1 Decoding/.classpath
@@ -6,5 +6,6 @@
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry combineaccessrules="false" kind="src" path="/pr104 - Utilities"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
