--- a/pr141 - Device Import/.classpath
+++ b/pr141 - Device Import/.classpath
@@ -11,5 +11,6 @@
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="D:/Development/Libraries/GSON 2.3.1/gson-2.3.1.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
