--- a/pr141 - Device Import/.classpath
+++ b/pr141 - Device Import/.classpath
@@ -1,21 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Gson 2.3.1">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/SWT 3.114.100 (Win64)"/>
-	<classpathentry kind="lib" path="lib/commons-collections4-4.1.jar"/>
-	<classpathentry kind="lib" path="lib/poi-3.17.jar"/>
-	<classpathentry kind="lib" path="lib/poi-ooxml-3.17.jar"/>
-	<classpathentry kind="lib" path="lib/poi-ooxml-schemas-3.17.jar"/>
-	<classpathentry kind="lib" path="lib/xmlbeans-2.6.0.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/SWT_Lnx64"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Google Gson 2.8.6"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Gson 2.3.1"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
