--- a/pr111 - S2 Resources/config/conky.conf
+++ b/pr111 - S2 Resources/config/conky.conf
@@ -45,12 +45,14 @@ no_buffers yes
 out_to_console no
 out_to_stderr no
 extra_newline no
+
 own_window yes
 own_window_class Conky
-own_window_type desktop
-#own_window_colour 30534C
-#own_window_colour 2C4F48
+own_window_type normal
+own_window_hints undecorated,below,skip_taskbar
+own_window_transparent false
 own_window_colour 24423F
+
 stippled_borders 0
 update_interval 1.0
 uppercase no
