--- a/pr151 - S2 ES Layer/.classpath
+++ b/pr151 - S2 ES Layer/.classpath
@@ -6,5 +6,7 @@
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Apache HttpComponents 5.1.3"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/FasterXML Jackson JSON 2.13.1"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
