--- a/pr101 - RPClient - SWT Basic/.classpath
+++ b/pr101 - RPClient - SWT Basic/.classpath
@@ -6,7 +6,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
@@ -21,5 +20,8 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/pr109 - Audio"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/SWT_Win64"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/pr134 - SWT Loader"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/Java JDK 1.8.0_231 (64b, C drive)"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/pr151 - S2 ES Layer"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/FasterXML Jackson JSON 2.13.1"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
