--- a/pr101 - RPClient - SWT Basic/pom.xml
+++ b/pr101 - RPClient - SWT Basic/pom.xml
@@ -20,12 +20,15 @@
 	</build>
 	<dependencies>
 
-<!--   <dependency>
+
+	<!-- Linux libraries will be loaded earlier on init, if necessary -->
+	<dependency>
   		<groupId>org.eclipse.swt</groupId>
   		<artifactId>org.eclipse.swt.win32.win32.x86_64</artifactId>
   		<version>4.3</version>
   		<scope>provided</scope>
-  	</dependency> -->
+  	</dependency>
+  	
 <!--   	<dependency>
   		<groupId>org.eclipse.swt</groupId>
   		<artifactId>org.eclipse.swt.gtk.linux.x86</artifactId>
