--- a/pr101 - RPClient - SWT Basic/.classpath
+++ b/pr101 - RPClient - SWT Basic/.classpath
@@ -20,7 +20,11 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/pr109 - Audio"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/SWT_Win64"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/pr134 - SWT Loader"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/Java JDK 1.8.0_231 (64b, C drive)"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry combineaccessrules="false" kind="src" path="/pr151 - S2 ES Layer"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/FasterXML Jackson JSON 2.13.1"/>
 	<classpathentry kind="output" path="target/classes"/>
