--- a/pr101 - RPClient - SWT Basic/pom.xml
+++ b/pr101 - RPClient - SWT Basic/pom.xml
@@ -88,6 +88,21 @@
 			<artifactId>commons-dbcp</artifactId>
 			<version>1.4</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-simple</artifactId>
+			<version>1.7.5</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.apache.kafka</groupId>
+			<artifactId>kafka-clients</artifactId>
+<!-- 			<version>3.2.0</version> -->
+<!-- 			<version>2.0.1</version> -->
+			<version>2.8.1</version>
+		</dependency>
+		
 <!-- 
 		<dependency>
 			<groupId>org.apache.commons</groupId>
@@ -95,5 +110,18 @@
 			<version>3.7</version>
 		</dependency>
 		 -->
+
+		<dependency>
+			<groupId>jmr</groupId>
+			<artifactId>jmr.pr153</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+
+		<dependency>
+			<groupId>jmr</groupId>
+			<artifactId>jmr.pr152</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+
 	</dependencies>
 </project>
