--- a/pr153 - S2 KEF Interface/pom.xml
+++ b/pr153 - S2 KEF Interface/pom.xml
@@ -38,7 +38,14 @@
 	      <artifactId>jackson-databind</artifactId>
 	      <version>[2.9.8,)</version>
 	    </dependency>
-		
+	    
+		<dependency>
+	  		<groupId>org.eclipse.swt</groupId>
+	  		<artifactId>org.eclipse.swt.win32.win32.x86_64</artifactId>
+	  		<version>4.3</version>
+	  		<scope>provided</scope>
+  		</dependency>
+  	
 	</dependencies>
   
 </project>
